package NMetaPrsOps;

option optimize_for = SPEED;

message TUrlRank {
    required string Url = 1;
    required float Rank = 2;
}

message TMetaPrsOpsOptions {
    enum EPoolFormat {
        PROTO = 1;
        TNODE = 2;
        TSV = 3;
    }
    required uint64 RequestId = 1;
    required string YtToken = 2;
    required string YtProxy = 3;
    required string YtTablePath = 4;
    required string SessionId = 5;
    optional string ExternalTransaction = 6 [default = ""];
    optional bool CommitEveryTransaction = 7 [default = false];
    optional int32 SessionLifetime = 8 [default = 120];

    optional EPoolFormat PoolFormat = 9 [default = PROTO];
    optional bool SubstituteRanks = 10 [default = false];
    repeated TUrlRank UrlRatings = 11;
    optional bool NeedFeatures = 12 [default = false];
    optional uint32 AllowedUnanswers = 13 [default = 30];
    optional bool StrictUnanswersCheck = 14 [default = false];
    optional bool VerboseDiagnostics = 15 [default = false];
    repeated string RequestedAttributes = 16;
    repeated string CustomSlices = 17;
    optional bool GatherFirstStageFeatures = 18 [default = false]; // Only if NeedFeatures == true and you need features from first stage
}
